--- a/css/desktop-style.css
+++ b/css/desktop-style.css
@@ -102,7 +102,50 @@ main{
 	padding: 10px;
 }
 
+.col-sm-4 .imagem{
+	position: relative;
+}
+
+.col-sm-4 .imagem .legenda{
+	position: absolute;
+	bottom: 0px;
+	text-align: center;
+	width: 100%;
+	background-color: black;
+	color: white;
+	padding: 10px;
+	font-size: 15px;
+	opacity: 0.7;
+}
+
+.col-sm-4 .imagem .legenda:hover{
+	transition: 0.5s;
+	opacity: 1.0;
+	font-size: 17px;
+}
+
+.col-sm-4 img{
+max-width:100%;
+}
+
 .background{
 	background-color: black;
-	height: 300px;
+	height: 245px;
+}
+
+footer{
+	background-color: black;
+}
+
+footer img{
+	float: right;
+	width: 30px;
+	margin: 0px 10px 0px 5px; 
+}
+
+footer p{
+	color: white;
+	padding: 5px;
+	margin-top: 0px;
+	text-align: center;
 }
