--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,25 @@
     src: url(../fonts/Oswald-Regular.ttf);
 }
 
+.footer{
+	background-color: black;
+	padding: 5px;
+}
+
+.footer img{
+	float: right;
+	width: 30px;
+	margin: 0px 10px 0px 5px; 
+}
+
+.footer p{
+	color: white;
+	padding: 5px;
+	margin-top: 0px;
+	margin-bottom: 0px;
+	text-align: center;
+}
+
 .carrossel{
 width: 100%
 }
@@ -23,7 +42,7 @@ a:active {
     text-decoration: underline;
 }
 
-header{
+.header{
 
 	background-color: black;
 	margin-top: 0px;
@@ -31,10 +50,10 @@ header{
 	top: 0px;
 	width: 100%;
 	opacity: 0.6;
-
+	z-index: 999;
 }
 
-header:hover {
+.header:hover {
 	opacity: 1.0;
 	transition-duration: 0.5s;
 }
@@ -74,10 +93,9 @@ a:hover{
   transition: 0.4s;
 }
 
-main{
+.noticias-container {
 	background-image: url(http://wallpapercave.com/wp/DM6hvet.jpg);
-	width: 100%;
-	height: 900px;
+	margin-top: -10px;
 }
 
 .barra-noticias{
@@ -96,4 +114,57 @@ main{
 .barra-noticias p:hover{
 	opacity: 1.0;
 	transition-duration: 0.5s;
+}
+
+.box-noticias{
+	padding: 10px;
+}
+
+.box-noticias .imagem{
+	position: relative;
+}
+
+.box-noticias .imagem .legenda{
+	position: absolute;
+	bottom: 0px;
+	text-align: center;
+	width: 100%;
+	background-color: black;
+	color: white;
+	padding: 10px;
+	font-size: 15px;
+	opacity: 0.7;
+}
+
+.box-noticias .imagem .legenda:hover{
+	transition: 0.5s;
+	opacity: 1.0;
+	font-size: 17px;
+}
+
+.box-noticias img{
+max-width:100%;
+}
+
+.box-noticias .noticia{
+	cursor: pointer;
+}
+
+
+@media screen and (max-width: 769px) {
+	.header  .menu-desktop{
+		display: none;
+	}
+	.header  .menu-mobile{
+		display: inline;
+	}
+}
+
+@media screen and (min-width: 770px) {
+	.header  .menu-desktop{
+		display: inline;
+	}
+	.header  .menu-mobile{
+		display: none;
+	}
 }
